<resources>
    <string name="app_name">El Denunciante</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Crear denuncias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Complaint add activity -->
    <string name="complaint_add_activity_edit_text_title">Titulo</string>
    <string name="complaint_add_activity_edit_text_description">Descripción</string>
    <string name="complaint_add_activity_button_create">Crear</string>

    <string name="test_name_one">Tubería rota</string>
    <string name="test_name_two">Animal en el agua</string>
    <string name="test_name_three">Basura en las alcantarillas</string>
    <string name="activity_main_email_title">Email</string>
    <string name="activity_main_password_title">Contraseña</string>
    <string name="activity_main_sign_in">Entrar</string>
    <string name="activity_main_sign_up">Registrarme</string>
    <string name="activity_main_name_title">Nombre</string>


    <!--Tour-->

    <string name="welcome_text">!Te damos la bienvenida a Hydro App!</string>
    <string name="publish_complaints">Ves algo que esta mal !Denuncialo!, y tu denuncia se hara publica</string>
    <string name="publish_photos">Anexa fotos ya sea por tu Camara o tu Galeria</string>
    <string name="geographic_location">Sabremos donde y cuando se realizo tu denuncia para localizar donde esta el daño</string>

    <!--All code-->

    <string name="requireTitle">Requiero un titulo</string>
    <string name="requirePassword">Requiero una contraseña</string>
    <string name="loading">Cargando</string>
    <string name="creatingComplaint"></string>
    <string name="tour_skip_text">Saltar</string>
    <string name="tour_done_text">Siguiente</string>

    <!--Layouts-->

    <string name="text_button_complaint">Seleccionar Imagen</string>
    <string name="nav_header_main_text">El Denunciante</string>

    <string name="main_drawer_complaints">Denuncias</string>
    <string name="main_drawer_myComplaints">Mis Denuncias</string>
    <string name="main_drawer_closeSession">Cerrar sesión</string>
    <string name="main_drawer_tools">Tools </string>
    <string name="main_drawer_communicate">Communicate </string>
    <string name="main_drawer_share">Share</string>
    <string name="main_drawer_Send">Send</string>


</resources>
