<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/ic_complaint"
            android:title="@string/main_drawer_complaints" />
        <item
            android:id="@+id/nav_myComplaints"
            android:icon="@drawable/ic_my_complaints"
            android:title="@string/main_drawer_myComplaints"/>
        <item
            android:id="@+id/nav_close"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/main_drawer_closeSession"
            android:visible="true" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_drawer_tools"
            android:visible="false"/>
    </group>

    <item android:title="@string/main_drawer_communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_drawer_Send" />
        </menu>
    </item>

</menu>
