<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context="com.uca.apps.isi.nct.activities.ComplaintAddActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_image_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundTint="@color/colorText"
                    >

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/complaint_add_activity_edit_text_title"
                        app:backgroundTint="@color/colorText"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backgroundTint="@color/colorText">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/complaint_add_activity_edit_text_description"
                        app:backgroundTint="@color/colorText"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/default_padding">

                <Button
                    android:id="@+id/boton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="load"
                    android:text="@string/text_button_complaint" />

                <Button
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="createComplaint"
                    android:text="@string/complaint_add_activity_button_create" />


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
